# vgsot-sim

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: api.md  cases.md  parameters.md  structure.md  technical_details.md  vgsot_api_updated.md
notebooks/: docs_cases_notebook.ipynb  test_import.ipynb
notebooks/version/: docs_cases_notebook_V1.0.ipynb  docs_cases_notebook_V1.1.ipynb  docs_cases_notebook_V1.2.ipynb  docs_cases_notebook_V1.3.ipynb  docs_cases_notebook_V1.4.ipynb  docs_cases_notebook_V1.5.ipynb
src/vgsot_sim/: __init__.py  anisotropy.py  cases.py  cli.py  configs.py  constants.py  dynamic_switching.py  electronic.py  initialize.py  result_io.py  ser_cases.py  time_series_cases.py  tmr.py
tests/: git.sh  test_imports.py
